--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         text-align: center;
+        width: 100%
       }
       body {
         background-color: #000 !important;
